test/langtools/tools/javac/unnamed/UnnamedErrors.out
UnnamedErrors.java:6:17: compiler.err.underscore.as.identifier
UnnamedErrors.java:7:18: compiler.err.underscore.as.identifier
UnnamedErrors.java:8:23: compiler.err.underscore.as.identifier
UnnamedErrors.java:9:19: compiler.err.underscore.as.identifier
UnnamedErrors.java:14:26: compiler.err.underscore.as.identifier
UnnamedErrors.java:16:26: compiler.err.underscore.as.identifier
UnnamedErrors.java:16:27: compiler.err.preview.feature.disabled.plural: (compiler.misc.feature.deconstruction.patterns)
UnnamedErrors.java:19:18: compiler.err.underscore.as.identifier
UnnamedErrors.java:26:18: compiler.err.preview.feature.disabled.plural: (compiler.misc.feature.pattern.switch)
UnnamedErrors.java:26:22: compiler.err.underscore.as.identifier
10 errors